Changes to GoAccess 1.8.1 - Tuesday, October 31, 2023

  - Added latest Android and macOS versions to the list of OSs.
  - Fixed issue when trying to apply a regex on an invalid value (HTML report).
  - Fixed issue with D3.js xScale.domain() going out of boundaries in certain
    cases.
  - Prevent setting default static files when no static-file options are
    defined in config file.

Changes to GoAccess 1.8 - Saturday, September 30, 2023

  - Added dual-stack support to the WebSocket server.
  - Added Debian Bookworm to the official deb repo.
  - Added Ubuntu Lunar to the official deb repo.
  - Fixed compiler error on macOS 10.12.
  - Updated bootstrap to v3.4.
  - Updated FontAwesome with additional icons for upcoming major release.
  - Updated Japanese translation.
  - Updated OS display from Macintosh to macOS.
  - Updated to D3.js v7 (latest) including charts.js code.

Changes to GoAccess 1.7.2 - Friday, March 31, 2023

  - Added a color-coding scheme to HTTP status codes.
  - Added '--external-assets' command line option to output external JS+CSS
    files. Great when used with Content Security Policy (CSP).
  - Ensure there's a fallback for 'Windows' if it appears on the user-agent.
  - Ensure we construct the WebSocket URL in a way that supports multiple use
    cases when used along '--ws-url' and '--port'.
  - Fixed a segfault due to a null pointer exception on FreeBSD.
  - Fixed build with '--disable-nls'.
  - Fixed invalid read (heap-buffer-overflow) when parsing an XFF spec via
    JSON.
  - Fixed segfault when parsing a specific XFF specifier.

Changes to GoAccess 1.7.1 - Tuesday, February 28, 2023

  - Added 'inlang' for easy localization (i18n) updates.
    https://inlang.com/editor/github.com/allinurl/goaccess
  - Added nanosecond parsing option via the '%n' specifier. Great for parsing
    'Traefik' JSON logs duration field.
  - Changed Docker workflow to build a docker image on different architectures
    {'arm64' & 'amd64'}.