@@ -132,6 +132,7 @@
 #log-format AWSELB
 #log-format AWSS3
 #log-format CADDY
+#log-format TRAEFIKCLF
 
 ######################################
 # UI Options
