@@ -245,6 +245,7 @@ one variable and another predefined name in another variable.
   AWSS3        - Amazon Simple Storage Service (S3)
   AWSALB       - Amazon Application Load Balancer
   CADDY        - Caddy's JSON Structured format
+  TRAEFIKCLF   - Traefik's CLF flavor
 .IP
 .I Note:
 Piping data into GoAccess won't prompt a log/date/time configuration dialog,
